--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ header1{display: flex; width:100%;}
 <section id="section1"><img src="1.png" width="110"  height="110">
 </section>
 
-<section id="section2"><center><h3 id="titulo">App 24 WASticker</h3>   <h4 style="color: green;">Pegatinas divertidas</h4>  </center>
+<section id="section2"><center><h3 id="titulo">Goten-tv</h3>   <p style="color: green;">Pelocula y Series</p>  </center>
 </section>
 
 <section id="section3">
