--- a/index.html
+++ b/index.html
@@ -104,20 +104,20 @@ header1{display: flex; width:100%;}
 <section id="section1"><img src="1.png" width="110"  height="110">
 </section>
 
-<section id="section2"><center><h3 id="titulo">Goten-tv</h3>   <p style="color: green;">Pelocula y Series</p>  </center>
+<section id="section2"><center><h3 id="titulo">Goten-tv</h3>   <p style="color: green;">Pelicula y Series</p>  </center>
 </section>
 
 <section id="section3">
-<div id="section4">Versión<br><h5>1.0(4)</h5>
+<div id="section4">Versión<br><h5>2.1(2)</h5>
 </div>
 <div id="linea"></div>
-<div id="section5">Tamaño<br><h5>17.04 MB</h5>
+<div id="section5">Tamaño<br><h5>19.36 MB</h5>
 </div>
 </section>
 </div>
   
 <div class="nav"> 
-<a href="App 24 WASticker_Android-life.apk" download="App 24 WASticker_Android-life" ><center>Descargar</center></a>
+<a href="gotentv2.1_Android-life.apk" download="gotentv2.1_Android-life " ><center>Descargar</center></a>
 </div>
   
 
@@ -133,16 +133,16 @@ header1{display: flex; width:100%;}
   
 <div class="main">
 <section id="section6">
-<img src="2.png" >
+<img src="2.jpg" >
 </section>
 <section id="section6">
-<img src="3.png"  >
+<img src="3.jpg"  >
 </section>
 <section id="section6">
-<img src="4.png" >
+<img src="4.jpg" >
 </section>
 <section id="section6">
-<img src="5.png" >
+<img src="5.jpg" >
 </section>
 </div>
 
