--- a/index.html
+++ b/index.html
@@ -148,10 +148,25 @@ header1{display: flex; width:100%;}
 
 <div class="footer">
 <p><pre>
-<h2>  Descripción:</h2></pre><br><p>Pegatinas divertidas para animar tus chats. Exprésate con creatividad.<br><br>
-
-\"Descubre una nueva forma de expresarte con App 24 WASticker, una increíble aplicación.<br><br>
-creado en App Creator 24
+<h2>  Descripción:</h2></pre><br><p>Celular, PC , smartv , tablet.etc.<br>
+🔴Mira televisión + películas + Series. <br>
+🔴donde quieras que estés, con canales premium.<br>
+-Canales de cine<br>
+-Canales de deportes<br>
+-Canales de cultura<br>
+-Canales infantiles<br>
+-Canales 24/7<br>
+-Canales adultos 🥵+🔞<br>
+-Canales de enventos<br>
+-FUTBOL COLOMBIANO<br>
+-LIGA 1 PERU<br>
+-LIGA PROFESIONAL ARGENTINA<br>
+-PREMIER LEAGUE<br>
+-BUNDESLIGA<br>
+-CHAMPIONS LEAGUE 🏆<br>
+-COPA LIBERTADORES 🏆<br>
+-COPA SUDAMERICANA 🏆<br>
+Películas y series últimos estrenos.
 </p>
 </div>
   
@@ -169,7 +184,7 @@ creado en App Creator 24
 </div>
 </div>
 <div class="nombre1">
-CanaryDroid
+npro5
 </div>
 </header1>
 
@@ -180,14 +195,14 @@ CanaryDroid
 </div>
 </div>
 <div class="nombre1">
-contact@canadadroid.com
+cuarentenagoku@gmail.com
 </div>
 </header1>
 
 <header1>
 <div class="logo1">
 <div class="log1">
-<a href="   http://www2.canadadroid.com/policy.htm    "><img src="privacidad.png " ></a>
+<a href="https://www.npro5.tk"><img src="privacidad.png " ></a>
 </div>
 </div>
 <div class="nombre1">
@@ -198,11 +213,11 @@ Politica de privacidad
 <header1>
 <div class="logo1">
 <div class="log1">
-<a href="    https://play.google.com/store/apps/details?id=com.zd.answer   "><img src="play.jpg " ></a>
+<a href="https://www.npro5.tk"><img src="web.png " ></a>
 </div>
 </div>
 <div class="nombre1">
-Google Play ID 
+Web
 </div>
 </header1> 
   
