--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@ header1{display: flex; width:100%;}
 <a href="gotentv2.1_Android-life.apk" download="gotentv2.1_Android-life " ><center>Descargar</center></a>
 </div>
   
-
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v17.0" nonce="wVxrJ9hD"></script>
   
 <section id="section03">
 <div id="section08">
@@ -222,7 +223,7 @@ Web
 </header1> 
   
 <div id="comentarios"></div>
-
+<div class="fb-comments" data-href="https://developer-shop.github.io/Goten-tv/" data-width="100" data-numposts="5"></div>
   
  <script type="text/javascript">(function(d, t, e, m){
     
